# VRCMacros

./: .gitignore  Cargo.toml  build-release.sh  macros.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  ControlBar.css  ControlBar.tsx  action.rs  action_group.rs  event_group.rs  index.tsx  keybinds.ts  main.rs  osc.rs  renderer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  osc.rs  runtime.rs  runtime.rs.old  setup.rs
src-tauri/src/frontend_calls/: close_app.rs  get_actions.rs  get_addresses.rs  load_previous_tabs.rs  mod.rs  save_graph.rs  settings.rs  sync_tab.rs  triggers.rs
src-tauri/src/runtime/: commands.rs  nodes.rs
src-tauri/src/runtime/nodes/: debug.rs  osctrigger.rs  press_key.rs  shell.rs
src-tauri/src/runtime/nodes/conditional/: ifequal.rs  iffalse.rs  iftrue.rs  mod.rs
src-tauri/src/runtime/nodes/oscactions/: mod.rs  sendchatbox.rs
src-tauri/src/runtime/nodes/statics/: float.rs  int.rs  mod.rs  string.rs
src-tauri/src/structs/: action.rs  mod.rs  nodes.rs  parameter_types.rs
src-tauri/src/utils/: config.rs  mod.rs  setup_traymenu.rs  vrchat_builtin_parameters.rs
src/Components/: Actions.css  Actions.tsx  Debug.css  Debug.tsx  Relays.tsx  Settings.tsx  Sidebar.css  Sidebar.tsx  TextInput.css  TextInput.tsx  TriggerEl.tsx
src/ContextMenu/: Canvas.tsx  Node.tsx
src/Mangers/: ConfirmationManager.tsx  NodeManager.tsx
src/Nodes/: Conditional.tsx  Debug.tsx  Nodes.tsx  OSCActions.tsx  OSCTrigger.tsx  PressKey.tsx  Shell.tsx  Statics.tsx
(+35 files in other folders)
