[package]
name = "VRCMacros"
version = "0.1.0"
description = "A Tauri App"
authors = ["_phaz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vrcmacros_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ 'tray-icon', 'image-png' ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47", features = [ "macros" ] }
dirs = "6.0"
anyhow = "1.0"
flate2 = "1.1"
tauri-plugin-dialog = "2"
crossbeam-channel = "0.5"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"

# [target.'cfg(windows)'.dependencies]
enigo = { version = "0.6.1" }

